docs(api): Document missing headers in swagger
